Ajout de la fonctionnalité de déporter le temps restant et la frame de couleur le contenant dans une nouvelle fenêtre tk (TopLevel). Correction d'un bug mineur sur l'état d'un bouton.

--- a/code/settings.json
+++ b/code/settings.json
@@ -1,4 +1,5 @@
 {
     "value_theme": "DEFAULT",
-    "value_sounds": false
+    "value_sounds": false,
+    "deportation_automatique_du_temps_restant_dans_une_nouvelle_fenetre": false
 }
