--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,6 @@
 {
     "value_theme": "DEFAULT",
     "value_sounds": false,
-    "value_affichage_heure": true
+    "value_affichage_heure": true,
+    "value_affichage_temps_enregistres": true
 }
