Correction du numéro de version en V0.2.1, ajout du texte 's' à côté de la spinbox/entrée des secondes et du texte 'min' à côté de la spinbox/entrée des minutes pour connaître l'utilité de chacune. Passage en français de certains éléments. Amélioration de l'option 'Ouvrir GitHub', maintenant si le navigateur est fermé cela l'ouvre sur le lien du dépôt GitHub et si il est ouvert cela ouvre un nouvelle onglet. Correction complète du fichier README.md.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@
 tkinter
 datetime
 webbrowser
-darkdetect
 sys
 subprocess
-pygame
+darkdetect
+PIL
 # du fichier variables.py
 os
 json
 platform
 getpass
 socket
+pygame
