Correction du fichier README.md et du fichier requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,3 @@
-# du fichier GoTime.py
-tkinter
-datetime
-webbrowser
-sys
-subprocess
+pillow
 darkdetect
-PIL
-# du fichier variables.py
-os
-json
-platform
-getpass
-socket
 pygame
