Ajout de la gestion de l'icone dans la barre d'application - à tester sur Windows et MacOS X. Tentative de correction du problème de redémarrage sur windows pour le programme compilé - ça marche pour le code python - à tester en compilé sous Windows.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ en_cours.txt
 # fichier d'installation en cours d'écriture
 install.sh
 install.bat
+# fichier LibreOffice Draw de l'icone de l'appli
+icon.odg
+.~lock.icon.odg#
