Ajout d'un chapitre 'Désinstallation' au fichier README.md et amélioration du chapitre 'Installation'. Tentative de correction de la fonction redémarrer de l'appli mais echec, l'option du menu redémarrer fonctionne bien sur l'interpréteur python3 mais pas sur les programmes compilés - Linux ou Microsoft Windows. Modification du fichier .gitignore pour masquer le dossier 'dev' contenant des éléments de développement et le fichier gotime-innosetup.iss

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ en_cours.txt
 # fichier LibreOffice Draw de l'icone de l'appli
 icon.odg
 .~lock.icon.odg#
+# dossier contenant des éléments de développement
+dev
+# fichier pascal d'inno-setup
+gotime-innosetup.iss
+# fichier d'installation sous Linux
