Ajout de nouveaux fichiers python pour plus de lisibilité. Correction du numéro de version dans le fichier variables.py. Update du fichier README.md. Ajout de capture d'écran au fichier README.md. Modification avant test de la fonction restart (fonctionne sous linux avec l'interpréteur python, à voir en sous Windows et en compilé sur les deux OS.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ icon.odg
 .~lock.icon.odg#
 # dossier contenant des éléments de développement
 dev
+# dossier d'environnement python au cas ou
+gotimeEnv
