update to v2.0.0 (see CHANGELOG.md file for more details)

--- a/dep/settings.json
+++ b/dep/settings.json
@@ -1,6 +1,6 @@
 {
     "active_theme": "system",
     "display_time": true,
-    "active_sounds": true,
+    "active_sounds": false,
     "shortcut_quit": true
 }
