--- a/dep/settings.json
+++ b/dep/settings.json
@@ -2,5 +2,6 @@
     "active_theme": "system",
     "display_time": true,
     "active_sounds": false,
-    "shortcut_quit": true
+    "shortcut_quit": true,
+    "check_update_at_startup": true
 }
